<resources>
    <string name="app_name">Messenger</string>
    <string name="hint">Enter a message</string>
    <string name="send">send message</string>
    <string name="go_calculator">go to calculator</string>
    <string name="show_duck">look on duck</string>
    <string name="chooser_send">Choice someone</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="toggle_button_on">on</string>
    <string name="toggle_button_off">off</string>

    <string-array name="spinner_values">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>

</resources>